<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bannerBoxText"
        style="@style/BannerStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widthHeight_50dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxOneText"
        style="@style/WhiteBox"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginTop="@dimen/contentMargin_16dp"
        android:layout_marginEnd="@dimen/contentMargin_16dp"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerBoxText" />

    <TextView
        android:id="@+id/boxTwoText"
        style="@style/WhiteBox"
        android:layout_width="@dimen/widthHeight_130dp"
        android:layout_height="@dimen/widthHeight_130dp"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginTop="@dimen/contentMargin_16dp"
        android:text="@string/box_two"
        app:layout_constraintEnd_toStartOf="@+id/boxThreeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOneText" />

    <TextView
        android:id="@+id/boxThreeText"
        style="@style/WhiteBox"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginEnd="@dimen/contentMargin_16dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/boxFourText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toTopOf="@+id/boxTwoText" />

    <TextView
        android:id="@+id/boxFourText"
        style="@style/WhiteBox"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginTop="@dimen/contentMargin_16dp"
        android:layout_marginEnd="@dimen/contentMargin_16dp"
        android:layout_marginBottom="@dimen/contentMargin_16dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/boxFiveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxThreeText" />

    <TextView
        android:id="@+id/boxFiveText"
        style="@style/WhiteBox"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginTop="@dimen/contentMargin_16dp"
        android:layout_marginEnd="@dimen/contentMargin_16dp"
        android:text="@string/box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxFourText" />

    <TextView
        android:id="@+id/howToPlay"
        style="@style/Instructions"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:text="@string/how_to_play"
        app:layout_constraintBottom_toBottomOf="@+id/gameInstructions"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameInstructions"
        style="@style/Instructions"
        android:layout_width="@dimen/widthHeight_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentMargin_16dp"
        android:layout_marginEnd="@dimen/contentMargin_16dp"
        android:layout_marginBottom="@dimen/contentMargin_16dp"
        android:text="@string/tap_the_screen_and_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/howToPlay"
        app:layout_constraintTop_toBottomOf="@+id/boxTwoText"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>